# frappe-signage-display-app

./: FRAPPE_V15_MIGRATION.md  hooks.py  pyproject.toml
public/js/: screen_form.js  screen_list.js  signage_form.js
signage_display/: hooks.py  patches.txt
signage_display/doctype/screen/: screen.json  screen.py
signage_display/doctype/screen_signage_item/: screen_signage_item.json  screen_signage_item.py
signage_display/doctype/signage/: signage.json  signage.py
signage_display/signage_display/: patches.txt
signage_display/signage_display/doctype/screen/: screen.js  screen.json  screen.py
signage_display/signage_display/doctype/screen_signage_item/: screen_signage_item.json  screen_signage_item.py
signage_display/signage_display/doctype/signage/: signage.js  signage.json  signage.py
signage_display/signage_display/doctype/signage_settings/: signage_settings.json
signage_display/www/: display.css  display.html  display.js  display.py
www/: display.css  display.html  display.js  display.py
